--- a/index.html
+++ b/index.html
@@ -8,6 +8,72 @@
     <link rel="stylesheet" href="styles.css"></link>
 </head>
 <body>
-   <h1>Hello World</h1> 
+    <div class="container">
+    
+        <!--HEADER-->
+        <div class="header">
+            <div class="logo">HEADER LOGO</div>
+            <ul class="header-links">
+                <li>header link one</li>
+                <li>header link two</li>
+                <li>header link three</li>
+            </ul>
+        </div>
+
+        <!--HERO-->
+        <div class="hero">
+            <div class="hero-left">
+                <h1>This website is awesome</h1>
+                <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+                <button>Sign up</button>
+            </div>
+        </div>
+        <img src="img/#" alt="hero-image-placeholder">
+
+        <!--INFORMATION -->
+        <div class="information">
+            <h3>Some random information</h3>
+            <ul class="info-cards">
+                <li>
+                    <img src="img/#" alt="info-image-1">
+                    <p>this is some subtext under an illustration or image</p>
+                </li>
+                <li>
+                    <img src="img/#" alt="info-image-2">
+                    <p>this is some subtext under an illustration or image</p>
+                </li>
+                <li>
+                    <img src="img/#" alt="info-image-3">
+                    <p>this is some subtext under an illustration or image</p>
+                </li>
+                <li>
+                    <img src="img/#" alt="info-image-4">
+                    <p>this is some subtext under an illustration or image</p>
+                </li>
+            </ul>
+        </div>
+
+        <!--QUOTE-->
+        <div class="quote">
+            <p class="quote-body">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, 
+                or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
+            <p class="quote-credit">
+                -Thor, God of Thunder
+            </p>
+        </div>
+        
+        <!--SIGN UP-->
+        <div class="sign-up">
+            <div class="sign-up-left">
+                <h3>Call to action! It's time!</h3>
+                <p>Sign up for our product by clicking that button right over there!</p>
+            </div>
+            <button>Sign up</button>
+        </div>
+
+        <!--FOOTER-->
+        <div class="footer">Copyright © The Odin Project 2021</div>
+
+    </div>
 </body>
 </html>
