--- a/index.html
+++ b/index.html
@@ -10,25 +10,29 @@
 <body>
     <div class="container">
     
-        <!--HEADER-->
-        <div class="header">
-            <div class="logo">HEADER LOGO</div>
-            <ul class="header-links">
-                <li>header link one</li>
-                <li>header link two</li>
-                <li>header link three</li>
-            </ul>
+        <div class="header-hero">
+            <!--HEADER-->
+            <div class="header">
+                <div class="logo">Header Logo</div>
+                <ul class="header-links">
+                    <li><a href="#">header link one</a></li>
+                    <li><a href="#">header link two</a></li>
+                    <li><a href="#">header link three</a></li>
+                </ul>
+            </div>
+
+            <!--HERO-->
+            <div class="hero">
+                <div class="hero-left">
+                    <h1>This website is awesome</h1>
+                    <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+                    <button>Sign up</button>
+                </div>
+                <img src="img/#" alt="hero-image-placeholder">
+            </div>
         </div>
 
-        <!--HERO-->
-        <div class="hero">
-            <div class="hero-left">
-                <h1>This website is awesome</h1>
-                <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
-                <button>Sign up</button>
-            </div>
-            <img src="img/#" alt="hero-image-placeholder">
-        </div>
+
 
         <!--INFORMATION -->
         <div class="information">
