--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <div class="hero-left">
                     <h1>This website is awesome</h1>
                     <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
-                    <button>Sign up</button>
+                    <button class="hero-button">Sign up</button>
                 </div>
                 <img src="img/#" alt="hero-image-placeholder">
             </div>
