--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
                     <button class="hero-button">Sign up</button>
                 </div>
-                <img src="img/#" alt="hero-image-placeholder">
+                <img src="img/gym.jpg" alt="hero-image-placeholder">
             </div>
         </div>
 
