add information photos, styled and centered each info section

--- a/index.html
+++ b/index.html
@@ -32,29 +32,27 @@
             </div>
         </div>
 
-
-
         <!--INFORMATION -->
         <div class="information">
             <h3>Some random information</h3>
-            <ul class="info-cards">
-                <li>
-                    <img src="img/#" alt="info-image-1">
+            <div class="info-cards">
+                <div class="squat">
+                    <img class="info-img" src="img/squat.jpg" alt="info-image-1">
                     <p>this is some subtext under an illustration or image</p>
-                </li>
-                <li>
-                    <img src="img/#" alt="info-image-2">
+                </div>
+                <div class="bench">
+                    <img class="info-img" src="img/bench.jpg" alt="info-image-2">
                     <p>this is some subtext under an illustration or image</p>
-                </li>
-                <li>
-                    <img src="img/#" alt="info-image-3">
+                </div>
+                <div class="deadlift">
+                    <img class="info-img" src="img/deadlift.jpg"info-image-3">
                     <p>this is some subtext under an illustration or image</p>
-                </li>
-                <li>
-                    <img src="img/#" alt="info-image-4">
+                </div>
+                <div class="overhead-press">
+                    <img class="info-img" src="img/overhead.jpg" alt="info-image-4">
                     <p>this is some subtext under an illustration or image</p>
-                </li>
-            </ul>
+                </div>
+            </div>
         </div>
 
         <!--QUOTE-->
