--- a/index.html
+++ b/index.html
@@ -38,19 +38,19 @@
             <div class="info-cards">
                 <div class="squat">
                     <img class="info-img" src="img/squat.jpg" alt="info-image-1">
-                    <p>this is some subtext under an illustration or image</p>
+                    <p class="info-text">this is some subtext under an illustration or image</p>
                 </div>
                 <div class="bench">
                     <img class="info-img" src="img/bench.jpg" alt="info-image-2">
-                    <p>this is some subtext under an illustration or image</p>
+                    <p class="info-text">this is some subtext under an illustration or image</p>
                 </div>
                 <div class="deadlift">
                     <img class="info-img" src="img/deadlift.jpg"info-image-3">
-                    <p>this is some subtext under an illustration or image</p>
+                    <p class="info-text">this is some subtext under an illustration or image</p>
                 </div>
                 <div class="overhead-press">
                     <img class="info-img" src="img/overhead.jpg" alt="info-image-4">
-                    <p>this is some subtext under an illustration or image</p>
+                    <p class="info-text">this is some subtext under an illustration or image</p>
                 </div>
             </div>
         </div>
