--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@
         <!--SIGN UP-->
         <div class="sign-up">
             <div class="sign-up-left">
-                <h3>Call to action! It's time!</h3>
-                <p>Sign up for our product by clicking that button right over there!</p>
+                <h2>Call to action! It's time!</h2>
+                <p class="p-sign-up">Sign up for our product by clicking that button right over there!</p>
             </div>
-            <button>Sign up</button>
+            <button id="sign-up-button">Sign up</button>
         </div>
 
         <!--FOOTER-->
