rounded corners to info pictures, styled footer, added wider margins

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <div class="hero-left">
                     <h1>This website is awesome</h1>
                     <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
-                    <button class="hero-button">Sign up</button>
+                    <button class="hero-button"><a href="#">Sign up</a></button>
                 </div>
                 <img src="img/gym.jpg" alt="hero-image-placeholder">
             </div>
@@ -70,7 +70,7 @@
                 <h2>Call to action! It's time!</h2>
                 <p class="p-sign-up">Sign up for our product by clicking that button right over there!</p>
             </div>
-            <button id="sign-up-button">Sign up</button>
+            <button id="sign-up-button"><a href="#">Sign up</a></button>
         </div>
 
         <!--FOOTER-->
